# nuwinter

./: README.md  analyse_data.ipynb  analyse_data_S250206dm.ipynb  analyse_data_winter_only.ipynb  coverage.ipynb  download_data.ipynb  env.example  plan_obs.ipynb  plot_lightcurve.ipynb  pyproject.toml  setup.py  upper_limits.ipynb
nuwinter/: __init__.py  avro.py  fields.py  neutrino.py  paths.py  schedule.py  transient.py  utils.py  ztf.py
nuwinter/data/: __init__.py
nuwinter/plot/: __init__.py  compress.py  plot_candidate.py
nuwinter/skyportal/: __init__.py  client.py  export_to_skyportal.py  photometry.py  thumbnail.py
